fix overlapped layout at the cart total section in the cart page

--- a/wp-content/themes/jv-allinone-child/style.css
+++ b/wp-content/themes/jv-allinone-child/style.css
@@ -32,3 +32,7 @@ Text Domain: Allinone
 #block-breadcrumb {
     padding: 15px 0;
 }
+
+.panel_cart_totals table td {
+    padding: 10px 0px 0px 10px;
+}
